--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
        <P>Web Developer, Student, and Designer in Tanzania,Dar-es-Salaam</P>
        <a href="tel:+2557684779951"><button>Hire me</menu></button></a>
        <p>Hey, I'm Johary. I'm a web developer living in Tanzania,Dar-es-Salaam. I am a fan of technology, design, and web development. I'm also interested in innovation and photography. You can hire me with a click on the botton above.</p>
-
+   </div>
+       <div class="info">
+       <h1><u>My CV</u></h1>
+       <p>I finished my primary education at <i>Qiblatain English Medium Primary School</i> at 2013 followed by a pre form one course for two months.</p><br>
+       <p>In 2014 I joined Secondary Education at <i>Alpha High School</i> which is the same school i studied the pre form one course. I graduated my Ordinary level Seconday Education at the same school and also proceeded with my Advanced Level also at <i>Alpha High School</i> and graduated with honours in 2017.</p><br>
+       <p>After I finished Secondary Education I applied for university in UDSM and managed to be selected to take Bachelor of Science in Business Information Technology where I am still proceeding with my studies.</p><br>
+   </div>
+   <div class="more">
+        <p>To know more about my university you may visit the link below;</p>
+        <a href="https://www.udsm.ac.tz/">@_UDSM</a>
+        <P>I'm also available through my E-mail <a href="mailto:joharymterry@gmail.com">My e-mail</a></P>
    </div>
 </body>
 </html>
