--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="WebsiteCSS.css">
     </head>
     <body>
-<h1>MEET HER!</h1>
+<h1>My Details</h1>
    <div class="content">
     <img src="moi.jpg" width="80" height="80" alt="A picture of Johary">
        <h1>JOHARY MTERI</h1>
